--- a/codeup-design.html
+++ b/codeup-design.html
@@ -33,6 +33,25 @@
         .rounded-circle {
             float: right;
         }
+    #d1{
+        float: left;
+        margin-left: 10em;
+
+    }
+    #d2{
+        float: right;
+        margin-right: 10em;
+    }
+
+    #d3{
+        float: left;
+        margin-left: 10em;
+    }
+
+    #d4{
+        float: right;
+        margin-right: 10em;
+    }
     </style>
 </head>
 <body>
@@ -43,22 +62,45 @@
                 <div class="col-12 col-md-3 text-center" id="main-header">
                     <h1>codeup design</h1>
                 </div>
+<!--start to nav-->
+<!--            <div class="col-12" id="first-nav-bar">-->
+<!--                <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
 
-                <div class="col-3 col-md-12 text-center top-menu" id="services">
-                    <h1>SERVICES</h1>
-                </div>
+<!--                    <div class="collapse navbar-collapse" id="small-nav-bar">-->
+<!--                        <ul class="navbar-nav">-->
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="#">SERVICES<span class="sr-only">(current)</span></a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="#">WORK<span class="sr-only">(current)</span></a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="#">BLOG<span class="sr-only">(current)</span></a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="#">CONTACT<span class="sr-only">(current)</span></a>-->
+<!--                            </li>-->
 
-                <div class="col-3 col-md-12 text-center top-menu" id="work">
-                    <h1>WORK</h1>
-                </div>
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--            </nav>-->
+     <!-- end of nav-->
 
-                <div class="col-3 col-md-12 text-center top-menu" id="blog">
-                    <h1>BLOG</h1>
-                </div>
+<!--                <div class="col-3 col-md-12 text-center top-menu" id="services">-->
+<!--                    <h1>SERVICES</h1>-->
+<!--                </div>-->
 
-                <div class="col-3 col-md-12 text-center top-menu" id="contact">
-                    <h1>CONTACT</h1>
-                </div>
+<!--                <div class="col-3 col-md-12 text-center top-menu" id="work">-->
+<!--                    <h1>WORK</h1>-->
+<!--                </div>-->
+
+<!--                <div class="col-3 col-md-12 text-center top-menu" id="blog">-->
+<!--                    <h1>BLOG</h1>-->
+<!--                </div>-->
+
+<!--                <div class="col-3 col-md-12 text-center top-menu" id="contact">-->
+<!--                    <h1>CONTACT</h1>-->
+<!--                </div>-->
 
                 <div class="col-12 text-center" id="main-title">
                     <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
@@ -71,12 +113,19 @@
 
         <div class="row" id="design-circle"> <!----ROW FOR CIRCLE IMAGES-->
             <div class="col-12 text-center mt-5 text-white">
-                <h3>DESIGN</h3>
-                <h3>DEVELOP</h3>
-                <h3>SUPPORT</h3>
-                <h3>HOST</h3>
+                <h3 id="d1">DESIGN</h3>
+                <h3 id="d2">DEVELOP</h3>
             </div>
-        </div> <!--ROW ENDS -->
+
+        </div>
+        <div class="row" id="design-circle"> <!----ROW FOR CIRCLE IMAGES-->
+            <div class="col-12 text-center mt-5 text-white">
+                <h3 id="d3">SUPPORT</h3>
+                <h3 id="d4">HOST</h3>
+            </div>
+
+        </div>
+        <!--ROW ENDS -->
 
         <div class="row">
             <div class="col-12 text-center mt-5">
