--- a/codeup-design.html
+++ b/codeup-design.html
@@ -11,155 +11,217 @@
     <title>Codeup Design</title>
 
     <style>
-        #main-container {
-            background-color: lightgray;
-        }
-        #main-header {
-            font-family: 'Abel', sans-serif;
-            margin-top: 3em;
-        }
-        .top-menu {
-            font-family: 'Abel', sans-serif;
-            font-weight: lighter;
-            margin-top: 4em;
-        }
-        #main-title {
-            margin-top: 8em;
-            font-family: 'Anton', sans-serif;
-        }
-        #green-apples {
+    /*<!--    #main-container {-->*/
+    /*<!--        background-color: lightgray;-->*/
+    /*<!--    }-->*/
+    /*<!--    #main-header {-->*/
+    /*<!--        font-family: 'Abel', sans-serif;-->*/
+    /*<!--        margin-top: 3em;-->*/
+    /*<!--    }-->*/
+    /*<!--    .top-menu {-->*/
+    /*<!--        font-family: 'Abel', sans-serif;-->*/
+    /*<!--        font-weight: lighter;-->*/
+    /*<!--        margin-top: 4em;-->*/
+    /*<!--    }-->*/
+    /*<!--    #main-title {-->*/
+    /*<!--        margin-top: 8em;-->*/
+    /*<!--        font-family: 'Anton', sans-serif;-->*/
+    /*<!--    }-->*/
+    /*<!--    #green-apples {-->*/
+    /*<!--        text-align: center;-->*/
+    /*<!--    }-->*/
+    /*<!--    .rounded-circle {-->*/
+    /*<!--        float: right;-->*/
+    /*<!--    }-->*/
+    /*<!--#d1{-->*/
+    /*<!--    float: left;-->*/
+    /*<!--    margin-left: 10em;-->*/
+
+    /*<!--}-->*/
+    /*<!--#d2{-->*/
+    /*<!--    float: right;-->*/
+    /*<!--    margin-right: 10em;-->*/
+    /*<!--}-->*/
+
+    /*<!--#d3{-->*/
+    /*<!--    float: left;-->*/
+    /*<!--    margin-left: 10em;-->*/
+    /*<!--}-->*/
+
+    /*<!--#d4{-->*/
+    /*<!--    float: right;-->*/
+    /*<!--    margin-right: 10em;-->*/
+    /*<!--}-->*/
+    /*<!--    .card-img-top{-->*/
+
+    /*<!--    }-->*/
+        .main-container{
             text-align: center;
         }
-        .rounded-circle {
-            float: right;
+        .code-up-design{
+            margin-top: 1em;
         }
-    #d1{
-        float: left;
-        margin-left: 10em;
+        .services-work-blog-contact{
+            margin-top: 1em;
+        }
+        .visual-design{
+            margin-top: 1em;
+        }
+        .from-park-city{
+            margin-top: 1em;
+        }
+        .design-develop-support-host{
+            margin-top: 1em;
+        }
+        .selected-work{
+            margin-top: 1em;
+        }
+        #nav-bar1{
+            text-decoration-color: black;
+        }
 
-    }
-    #d2{
-        float: right;
-        margin-right: 10em;
-    }
-
-    #d3{
-        float: left;
-        margin-left: 10em;
-    }
-
-    #d4{
-        float: right;
-        margin-right: 10em;
-    }
     </style>
 </head>
 <body>
-
-    <div class="container" id="main-container"><!-----CONTAINER DIV OPEN------->
-
-        <div class="row" id="services-row"> <!-----FIRST ROW---->
-                <div class="col-12 col-md-3 text-center" id="main-header">
-                    <h1>codeup design</h1>
-                </div>
-<!--start to nav-->
-<!--            <div class="col-12" id="first-nav-bar">-->
-<!--                <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-
-<!--                    <div class="collapse navbar-collapse" id="small-nav-bar">-->
-<!--                        <ul class="navbar-nav">-->
-<!--                            <li class="nav-item active">-->
-<!--                                <a class="nav-link" href="#">SERVICES<span class="sr-only">(current)</span></a>-->
-<!--                            </li>-->
-<!--                            <li class="nav-item active">-->
-<!--                                <a class="nav-link" href="#">WORK<span class="sr-only">(current)</span></a>-->
-<!--                            </li>-->
-<!--                            <li class="nav-item active">-->
-<!--                                <a class="nav-link" href="#">BLOG<span class="sr-only">(current)</span></a>-->
-<!--                            </li>-->
-<!--                            <li class="nav-item active">-->
-<!--                                <a class="nav-link" href="#">CONTACT<span class="sr-only">(current)</span></a>-->
-<!--                            </li>-->
-
-<!--                        </ul>-->
-<!--                    </div>-->
-<!--            </nav>-->
-     <!-- end of nav-->
-
-<!--                <div class="col-3 col-md-12 text-center top-menu" id="services">-->
-<!--                    <h1>SERVICES</h1>-->
-<!--                </div>-->
-
-<!--                <div class="col-3 col-md-12 text-center top-menu" id="work">-->
-<!--                    <h1>WORK</h1>-->
-<!--                </div>-->
-
-<!--                <div class="col-3 col-md-12 text-center top-menu" id="blog">-->
-<!--                    <h1>BLOG</h1>-->
-<!--                </div>-->
-
-<!--                <div class="col-3 col-md-12 text-center top-menu" id="contact">-->
-<!--                    <h1>CONTACT</h1>-->
-<!--                </div>-->
-
-                <div class="col-12 text-center" id="main-title">
-                    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-                </div>
-
-                <div class="col-12 text-center mt-5" id="from-park">
-                    <h3>FROM PARK CITY, UTAH</h3>
-                </div>
+    <div class="main-container">
+        <div class="code-up-design">
+            <div>codeup design</div>
         </div>
 
-        <div class="row" id="design-circle"> <!----ROW FOR CIRCLE IMAGES-->
-            <div class="col-12 text-center mt-5 text-white">
-                <h3 id="d1">DESIGN</h3>
-                <h3 id="d2">DEVELOP</h3>
-            </div>
 
-        </div>
-        <div class="row" id="design-circle"> <!----ROW FOR CIRCLE IMAGES-->
-            <div class="col-12 text-center mt-5 text-white">
-                <h3 id="d3">SUPPORT</h3>
-                <h3 id="d4">HOST</h3>
-            </div>
-
-        </div>
-        <!--ROW ENDS -->
-
-        <div class="row">
-            <div class="col-12 text-center mt-5">
-                <h3>SELECTED WORK</h3>
-            </div>
+        <div class="services-work-blog-contact ">
+            <ul class="nav justify-content-center" id="nav-bar1">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">SERVICES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">WORK</a>
+                </li><li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                </li><li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT</a>
+                </li>
+            </ul>
+<!--            <div>SERVICES</div>-->
+<!--            <div>WORK</div>-->
+<!--            <div>BLOG</div>-->
+<!--            <div>CONTACT</div>-->
         </div>
 
-        <div class="card col-12" style="width: 18rem;" id="green-apples">
 
-            <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
-
+        <div class="visual-design">
+            <div>VISUAL DESIGN & WEB DEVELOPMENT</div>
         </div>
 
-        <div class="row" id="featured-products">
-            <div class="col-12 mb-5">
-                <h3>FEATURED PROJECT</h3>
-                <span class="badge badge-pill badge-primary rounded-circle">D</span>
-                <span class="badge badge-pill badge-primary rounded-circle">D</span>
-                <span class="badge badge-pill badge-primary rounded-circle">S</span>
-                <span class="badge badge-pill badge-primary rounded-circle">H</span>
+
+        <div class="from-park-city">
+            <div>FROM PARK CITY, UTAH</div>
+        </div>
+
+
+        <div class="design-develop-support-host">
+            <div>DESIGN</div>
+            <div>DEVELOP</div>
+            <div>SUPPORT</div>
+            <div>HOST</div>
+        </div>
+
+
+        <div class="selected-work">
+            <div>SELECTED WORK</div>
+        </div>
+
+
+        <div class="mx-auto" style="width: 200px;">
+            <div class="card col-12" style="width: 18em;" id="green-apples">
+                <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
             </div>
         </div>
 
 
 
+        <div class="featured-project">
+            <div>FEATURED PROJECT</div>
+        </div>
 
 
-    </div><!---CONTAINER DIV CLOSE----->
+        <div class="four-circles-container">
+            <div class="four-circles">
+                <div>D</div>
+                <div>D</div>
+                <div>S</div>
+                <div>H</div>
+            </div>
+        </div>
 
 
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </div>
+<!--    <div class="container" id="main-container">&lt;!&ndash;-&#45;&#45;CONTAINER DIV OPEN-&#45;&#45;&#45;&#45;&ndash;&gt;-->
+
+<!--        <div class="row" id="services-row"> &lt;!&ndash;-&#45;&#45;FIRST ROW&#45;&#45;&ndash;&gt;-->
+<!--                <div class="col-12 col-md-3 text-center" id="main-header">-->
+<!--                    <h1>codeup design</h1>-->
+<!--                </div>-->
+
+<!--                <div class="col-12 text-center" id="main-title">-->
+<!--                    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>-->
+<!--                </div>-->
+
+<!--                <div class="col-12 text-center mt-5" id="from-park">-->
+<!--                    <h3>FROM PARK CITY, UTAH</h3>-->
+<!--                </div>-->
+<!--        </div>-->
+
+<!--        <div class="row" id="design-circle"> &lt;!&ndash;&#45;&#45;ROW FOR CIRCLE IMAGES&ndash;&gt;-->
+<!--            <div class="col-12 text-center mt-5 text-white">-->
+<!--                <h3 id="d1">DESIGN</h3>-->
+<!--                <h3 id="d2">DEVELOP</h3>-->
+<!--            </div>-->
+
+<!--        </div>-->
+<!--        <div class="row" id="design-circle"> &lt;!&ndash;&#45;&#45;ROW FOR CIRCLE IMAGES&ndash;&gt;-->
+<!--            <div class="col-12 text-center mt-5 text-white">-->
+<!--                <h3 id="d3">SUPPORT</h3>-->
+<!--                <h3 id="d4">HOST</h3>-->
+<!--            </div>-->
+
+<!--        </div>-->
+<!--        &lt;!&ndash;ROW ENDS &ndash;&gt;-->
+
+<!--        <div class="row">-->
+<!--            <div class="col-12 text-center mt-5">-->
+<!--                <h3>SELECTED WORK</h3>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="card col-12" style="width: 18em;" id="green-apples">-->
+
+<!--            <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">-->
+
+<!--        </div>-->
+
+<!--        <div class="row" id="featured-products">-->
+<!--            <div class="col-12 mb-5">-->
+<!--                <h3>FEATURED PROJECT</h3>-->
+<!--                <span class="badge badge-pill badge-primary rounded-circle">D</span>-->
+<!--                <span class="badge badge-pill badge-primary rounded-circle">D</span>-->
+<!--                <span class="badge badge-pill badge-primary rounded-circle">S</span>-->
+<!--                <span class="badge badge-pill badge-primary rounded-circle">H</span>-->
+<!--            </div>-->
+<!--        </div>-->
+
+
+
+
+
+<!--    </div>&lt;!&ndash;-CONTAINER DIV CLOSE-&#45;&#45;&ndash;&gt;-->
+
+
+
+<!--&lt;!&ndash; jQuery first, then Popper.js, then Bootstrap JS &ndash;&gt;-->
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
 </body>
 </html>
