added design circles

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -79,6 +79,50 @@
         #nav-bar1{
             text-decoration-color: black;
         }
+        #cir-1 {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            display: inline-block;
+            border: 5px solid white;
+            font-family: 'Anton', sans-serif;
+            font-size: medium;
+            background-color: #E6563B;
+            color: white;
+        }
+        #cir-2 {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            display: inline-block;
+            border: 5px solid white;
+            font-family: 'Anton', sans-serif;
+            font-size: medium;
+            background-color: #DF9F3D;
+            color: white;
+        }
+        #cir-3 {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            display: inline-block;
+            border: 5px solid white;
+            font-family: 'Anton', sans-serif;
+            font-size: medium;
+            background-color: #7cb06c;
+            color: white;
+        }
+        #cir-4 {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            display: inline-block;
+            border: 5px solid white;
+            font-family: 'Anton', sans-serif;
+            font-size: medium;
+            background-color: #00aba9;
+            color: white;
+        }
 
     </style>
 </head>
@@ -120,10 +164,10 @@
 
 
         <div class="design-develop-support-host">
-            <div>DESIGN</div>
-            <div>DEVELOP</div>
-            <div>SUPPORT</div>
-            <div>HOST</div>
+            <button type="button" class="btn" id="cir-1">DESIGN</button>
+            <button type="button" class="btn" id="cir-2">DEVELOP</button>
+            <button type="button" class="btn" id="cir-3">SUPPORT</button>
+            <button type="button" class="btn" id="cir-4">HOST</button>
         </div>
 
 
