added top nav text color

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -79,6 +79,9 @@
         #nav-bar1{
             text-decoration-color: black;
         }
+        .nav-link{
+            color: black;
+        }
 
     </style>
 </head>
