added the backround color

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -57,24 +57,33 @@
     /*<!--    }-->*/
         .main-container{
             text-align: center;
+            background-color: #f0f0f0;
         }
         .code-up-design{
             margin-top: 1em;
+            font-family: 'Abel', sans-serif;
         }
         .services-work-blog-contact{
             margin-top: 1em;
+            font-family: 'Abel', sans-serif;
         }
         .visual-design{
             margin-top: 1em;
+            font-family: 'Anton', sans-serif;
         }
         .from-park-city{
             margin-top: 1em;
+            font-family: 'Anton', sans-serif;
         }
         .design-develop-support-host{
             margin-top: 1em;
         }
         .selected-work{
             margin-top: 1em;
+            font-family: 'Abel', sans-serif;
+        }
+        .featured-project {
+            font-family: 'Abel', sans-serif;
         }
         #nav-bar1{
             text-decoration-color: black;
@@ -126,7 +135,39 @@
             background-color: #00aba9;
             color: white;
         }
-
+        .four-circles {
+            font-family: 'Anton', sans-serif;
+            display: inline-block;
+            font-size: 50px;
+        }
+        #dot-1 {
+            height: 45px;
+            width: 45px;
+            border-radius: 50%;
+            display: inline-block;
+            background-color: #E6563B;
+        }
+        #dot-2 {
+            height: 45px;
+            width: 45px;
+            border-radius: 50%;
+            display: inline-block;
+            background-color: #DF9F3D;
+        }
+        #dot-3 {
+            height: 45px;
+            width: 45px;
+            border-radius: 50%;
+            display: inline-block;
+            background-color: #7cb06c;
+        }
+        #dot-4 {
+            height: 45px;
+            width: 45px;
+            border-radius: 50%;
+            display: inline-block;
+            background-color: #00aba9;
+        }
     </style>
 </head>
 <body>
@@ -194,10 +235,10 @@
 
         <div class="four-circles-container">
             <div class="four-circles">
-                <div>D</div>
-                <div>D</div>
-                <div>S</div>
-                <div>H</div>
+                <button type="button" class="btn" id="dot-1">D</button>
+                <button type="button" class="btn" id="dot-2">D</button>
+                <button type="button" class="btn" id="dot-3">S</button>
+                <button type="button" class="btn" id="dot-4">H</button>
             </div>
         </div>
 
@@ -267,8 +308,8 @@
 
 
 <!--&lt;!&ndash; jQuery first, then Popper.js, then Bootstrap JS &ndash;&gt;-->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
