added logo and nav bar with bg color

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -172,6 +172,16 @@
 </head>
 <body>
     <div class="main-container">
+        <div class="row">
+            <div class="col-12 m-0 p-0 mt-5">
+                <ul class="nav justify-content-center bg-white" id="top-logo">
+                    <li>
+                        <img src="img/logo.jpg" width=105px height=105px alt="design-logo">
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         <div class="code-up-design">
             <div>codeup design</div>
         </div>
