--- a/codeup-design.html
+++ b/codeup-design.html
@@ -11,57 +11,15 @@
     <title>Codeup Design</title>
 
     <style>
-    /*<!--    #main-container {-->*/
-    /*<!--        background-color: lightgray;-->*/
-    /*<!--    }-->*/
-    /*<!--    #main-header {-->*/
-    /*<!--        font-family: 'Abel', sans-serif;-->*/
-    /*<!--        margin-top: 3em;-->*/
-    /*<!--    }-->*/
-    /*<!--    .top-menu {-->*/
-    /*<!--        font-family: 'Abel', sans-serif;-->*/
-    /*<!--        font-weight: lighter;-->*/
-    /*<!--        margin-top: 4em;-->*/
-    /*<!--    }-->*/
-    /*<!--    #main-title {-->*/
-    /*<!--        margin-top: 8em;-->*/
-    /*<!--        font-family: 'Anton', sans-serif;-->*/
-    /*<!--    }-->*/
-    /*<!--    #green-apples {-->*/
-    /*<!--        text-align: center;-->*/
-    /*<!--    }-->*/
-    /*<!--    .rounded-circle {-->*/
-    /*<!--        float: right;-->*/
-    /*<!--    }-->*/
-    /*<!--#d1{-->*/
-    /*<!--    float: left;-->*/
-    /*<!--    margin-left: 10em;-->*/
 
-    /*<!--}-->*/
-    /*<!--#d2{-->*/
-    /*<!--    float: right;-->*/
-    /*<!--    margin-right: 10em;-->*/
-    /*<!--}-->*/
-
-    /*<!--#d3{-->*/
-    /*<!--    float: left;-->*/
-    /*<!--    margin-left: 10em;-->*/
-    /*<!--}-->*/
-
-    /*<!--#d4{-->*/
-    /*<!--    float: right;-->*/
-    /*<!--    margin-right: 10em;-->*/
-    /*<!--}-->*/
-    /*<!--    .card-img-top{-->*/
-
-    /*<!--    }-->*/
         .main-container{
             text-align: center;
             background-color: #f0f0f0;
         }
         .code-up-design{
-            margin-top: 1em;
+            /*margin-top: 1em;*/
             font-family: 'Abel', sans-serif;
+            font-size: 45px;
         }
         .services-work-blog-contact{
             margin-top: 1em;
@@ -70,27 +28,37 @@
         .visual-design{
             margin-top: 1em;
             font-family: 'Anton', sans-serif;
+            font-size: 40px;
+
         }
         .from-park-city{
             margin-top: 1em;
             font-family: 'Anton', sans-serif;
+            font-size: 30px;
+
         }
         .design-develop-support-host{
-            margin-top: 1em;
+            margin-top: 2em;
         }
         .selected-work{
-            margin-top: 1em;
+            margin-top: 4em;
             font-family: 'Abel', sans-serif;
         }
         .featured-project {
             font-family: 'Abel', sans-serif;
-        }
-        #nav-bar1{
-            text-decoration-color: black;
+
         }
         .nav-link {
             color: black;
         }
+        #green-apples{
+            margin-top: 1em;
+            background-color: #e6e6e6;
+        }
+        #nav-bar1 {
+            text-decoration-color: black;
+        }
+
         #cir-1 {
             height: 100px;
             width: 100px;
@@ -146,6 +114,8 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #E6563B;
+            font-family: 'Anton', sans-serif;
+            font-size: 25px;
         }
         #dot-2 {
             height: 45px;
@@ -153,6 +123,8 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #DF9F3D;
+            font-family: 'Anton', sans-serif;
+            font-size: 25px;
         }
         #dot-3 {
             height: 45px;
@@ -160,6 +132,8 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #7cb06c;
+            font-family: 'Anton', sans-serif;
+            font-size: 25px;
         }
         #dot-4 {
             height: 45px;
@@ -167,6 +141,9 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #00aba9;
+            font-family: 'Anton', sans-serif;
+            font-size: 25px;
+
         }
     </style>
 </head>
@@ -200,15 +177,13 @@
                     <a class="nav-link" href="#">CONTACT</a>
                 </li>
             </ul>
-<!--            <div>SERVICES</div>-->
-<!--            <div>WORK</div>-->
-<!--            <div>BLOG</div>-->
-<!--            <div>CONTACT</div>-->
+
         </div>
 
 
         <div class="visual-design">
-            <div>VISUAL DESIGN & WEB DEVELOPMENT</div>
+            <div>VISUAL DESIGN &</div>
+            <div>WEB DEVELOPMENT</div>
         </div>
 
 
@@ -218,10 +193,14 @@
 
 
         <div class="design-develop-support-host">
-            <button type="button" class="btn" id="cir-1">DESIGN</button>
-            <button type="button" class="btn" id="cir-2">DEVELOP</button>
-            <button type="button" class="btn" id="cir-3">SUPPORT</button>
-            <button type="button" class="btn" id="cir-4">HOST</button>
+            <div class="cir-1-2">
+                <button type="button" class="btn" id="cir-1">DESIGN</button>
+                <button type="button" class="btn" id="cir-2">DEVELOP</button>
+            </div>
+            <div class="cir-3-4">
+                <button type="button" class="btn" id="cir-3">SUPPORT</button>
+                <button type="button" class="btn" id="cir-4">HOST</button>
+            </div>
         </div>
 
 
@@ -232,92 +211,35 @@
 
         <div class="mx-auto" style="width: 200px;">
             <div class="card col-12" style="width: 18em;" id="green-apples">
-                <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
+                <img src="img/apple-ipad.jpg"  width="200px" class="card-img-top" alt="...">
             </div>
         </div>
 
 
-
-        <div class="featured-project">
-            <div>FEATURED PROJECT</div>
-        </div>
-
-
-        <div class="four-circles-container">
-            <div class="four-circles">
-                <button type="button" class="btn" id="dot-1">D</button>
-                <button type="button" class="btn" id="dot-2">D</button>
-                <button type="button" class="btn" id="dot-3">S</button>
-                <button type="button" class="btn" id="dot-4">H</button>
+        <div class="d-inline">
+            <div class="featured-project">
+                <div>FEATURED PROJECT
+                    <button type="button" class="btn" id="dot-1">D</button>
+                    <button type="button" class="btn" id="dot-2">D</button>
+                    <button type="button" class="btn" id="dot-3">S</button>
+                    <button type="button" class="btn" id="dot-4">H</button>
+                </div>
             </div>
-        </div>
 
+
+<!--            <div class="four-circles-container">-->
+<!--                <div class="four-circles">-->
+<!--                    <button type="button" class="btn" id="dot-1">D</button>-->
+<!--                    <button type="button" class="btn" id="dot-2">D</button>-->
+<!--                    <button type="button" class="btn" id="dot-3">S</button>-->
+<!--                    <button type="button" class="btn" id="dot-4">H</button>-->
+<!--                </div>-->
+<!--            </div>-->
+        </div>
 
 
     </div>
-<!--    <div class="container" id="main-container">&lt;!&ndash;-&#45;&#45;CONTAINER DIV OPEN-&#45;&#45;&#45;&#45;&ndash;&gt;-->
 
-<!--        <div class="row" id="services-row"> &lt;!&ndash;-&#45;&#45;FIRST ROW&#45;&#45;&ndash;&gt;-->
-<!--                <div class="col-12 col-md-3 text-center" id="main-header">-->
-<!--                    <h1>codeup design</h1>-->
-<!--                </div>-->
-
-<!--                <div class="col-12 text-center" id="main-title">-->
-<!--                    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>-->
-<!--                </div>-->
-
-<!--                <div class="col-12 text-center mt-5" id="from-park">-->
-<!--                    <h3>FROM PARK CITY, UTAH</h3>-->
-<!--                </div>-->
-<!--        </div>-->
-
-<!--        <div class="row" id="design-circle"> &lt;!&ndash;&#45;&#45;ROW FOR CIRCLE IMAGES&ndash;&gt;-->
-<!--            <div class="col-12 text-center mt-5 text-white">-->
-<!--                <h3 id="d1">DESIGN</h3>-->
-<!--                <h3 id="d2">DEVELOP</h3>-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--        <div class="row" id="design-circle"> &lt;!&ndash;&#45;&#45;ROW FOR CIRCLE IMAGES&ndash;&gt;-->
-<!--            <div class="col-12 text-center mt-5 text-white">-->
-<!--                <h3 id="d3">SUPPORT</h3>-->
-<!--                <h3 id="d4">HOST</h3>-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--        &lt;!&ndash;ROW ENDS &ndash;&gt;-->
-
-<!--        <div class="row">-->
-<!--            <div class="col-12 text-center mt-5">-->
-<!--                <h3>SELECTED WORK</h3>-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <div class="card col-12" style="width: 18em;" id="green-apples">-->
-
-<!--            <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">-->
-
-<!--        </div>-->
-
-<!--        <div class="row" id="featured-products">-->
-<!--            <div class="col-12 mb-5">-->
-<!--                <h3>FEATURED PROJECT</h3>-->
-<!--                <span class="badge badge-pill badge-primary rounded-circle">D</span>-->
-<!--                <span class="badge badge-pill badge-primary rounded-circle">D</span>-->
-<!--                <span class="badge badge-pill badge-primary rounded-circle">S</span>-->
-<!--                <span class="badge badge-pill badge-primary rounded-circle">H</span>-->
-<!--            </div>-->
-<!--        </div>-->
-
-
-
-
-
-<!--    </div>&lt;!&ndash;-CONTAINER DIV CLOSE-&#45;&#45;&ndash;&gt;-->
-
-
-
-<!--&lt;!&ndash; jQuery first, then Popper.js, then Bootstrap JS &ndash;&gt;-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
