fixed middle 4 circles spacing

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -69,6 +69,8 @@
             font-size: medium;
             background-color: #E6563B;
             color: white;
+            margin-right: .5em;
+            margin-bottom: .5em;
         }
         #cir-2 {
             height: 100px;
@@ -80,6 +82,8 @@
             font-size: medium;
             background-color: #DF9F3D;
             color: white;
+            /*margin-left: 1em;*/
+            margin-bottom: .5em;
         }
         #cir-3 {
             height: 100px;
@@ -91,6 +95,8 @@
             font-size: medium;
             background-color: #7cb06c;
             color: white;
+            margin-right: .5em;
+            margin-bottom: .5em;
         }
         #cir-4 {
             height: 100px;
@@ -102,6 +108,8 @@
             font-size: medium;
             background-color: #00aba9;
             color: white;
+            /*margin-left: 1em;*/
+            margin-bottom: .5em;
         }
         .four-circles {
             font-family: 'Anton', sans-serif;
