--- a/lg-codeup-design.html
+++ b/lg-codeup-design.html
@@ -128,6 +128,11 @@
         #the-last {
 
         }
+        #man {
+            margin-top: 2em;
+            margin-left: 2.5em;
+            border: 3px solid #e6e6e6;
+        }
     </style>
 </head>
 
@@ -218,9 +223,11 @@
         <div class="col-2"><!----DIV COLUMN START---->
 
             <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="green-apples">
-
                 <img src="img/apple-ipad.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
+            </div>
 
+            <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="man">
+                <img src="img/man.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
             </div>
         </div><!----DIV COLUMN END---->
 
