--- a/lg-codeup-design.html
+++ b/lg-codeup-design.html
@@ -26,6 +26,9 @@
         .nav-link {
             color: black;
         }
+        .fp-green-apples {
+            font-size: 10px;
+        }
         #logo-item {
             margin-left: 8em;
         }
@@ -92,6 +95,7 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #E6563B;
+            font-size: 10px;
         }
         #dot-2 {
             height: 25px;
@@ -99,6 +103,7 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #DF9F3D;
+            font-size: 10px;
         }
         #dot-3 {
             height: 25px;
@@ -106,6 +111,7 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #7cb06c;
+            font-size: 10px;
         }
         #dot-4 {
             height: 25px;
@@ -113,6 +119,7 @@
             border-radius: 50%;
             display: inline-block;
             background-color: #00aba9;
+            font-size: 10px;
         }
         /*need to adjust length of line*/ #hr-custom {
                                               border-top: 3px solid #e6e6e6;
@@ -226,13 +233,30 @@
                 <img src="img/apple-ipad.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
             </div>
 
-            <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="man">
-                <img src="img/man.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
-            </div>
-        </div><!----DIV COLUMN END---->
+            <div class="d-inline">
+                <div class="fp-green-apples col-12" id="fp-dots">
+                    <div>FEATURED PROJECT
+                        <button type="button" class="btn" id="dot-1">D</button>
+                        <button type="button" class="btn" id="dot-2">D</button>
+                        <button type="button" class="btn" id="dot-3">S</button>
+                        <button type="button" class="btn" id="dot-4">H</button>
+                    </div>
+                </div>
+
+
+                <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="man">
+                    <img src="img/man.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
+                </div>
+            </div>-<!----DIV COLUMN END---->
 
         <div class="col-2"><!---DIV COLUMN START---->
-            <!---use cards for img--->
+<!--            <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="macbook">-->
+<!--                <img src="img/macbook.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">-->
+<!--            </div>-->
+
+<!--            <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="security">-->
+<!--                <img src="img/security.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">-->
+<!--            </div>-->
         </div><!---DIV COLUMN END--->
 
         <div class="col-2"><!---DIV COLUMN START---->
