images re-positioned

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -46,14 +46,17 @@
         }
         .featured-project {
             font-family: 'Abel', sans-serif;
+            margin-left: 1em;
 
         }
         .nav-link {
             color: black;
         }
         #green-apples{
+            margin-left: 7em;
             margin-top: 1em;
             background-color: #e6e6e6;
+
         }
         #nav-bar1 {
             text-decoration-color: black;
@@ -117,41 +120,42 @@
             font-size: 50px;
         }
         #dot-1 {
-            height: 45px;
-            width: 45px;
+            height: 25px;
+            width: 25px;
             border-radius: 50%;
             display: inline-block;
             background-color: #E6563B;
             font-family: 'Anton', sans-serif;
-            font-size: 25px;
+            font-size: 8px;
+            margin-left: 4em;
 
         }
         #dot-2 {
-            height: 45px;
-            width: 45px;
+            height: 25px;
+            width: 25px;
             border-radius: 50%;
             display: inline-block;
             background-color: #DF9F3D;
             font-family: 'Anton', sans-serif;
-            font-size: 25px;
+            font-size: 8px;
         }
         #dot-3 {
-            height: 45px;
-            width: 45px;
+            height: 25px;
+            width: 25px;
             border-radius: 50%;
             display: inline-block;
             background-color: #7cb06c;
             font-family: 'Anton', sans-serif;
-            font-size: 25px;
+            font-size: 8px;
         }
         #dot-4 {
-            height: 45px;
-            width: 45px;
+            height: 25px;
+            width: 25px;
             border-radius: 50%;
             display: inline-block;
             background-color: #00aba9;
             font-family: 'Anton', sans-serif;
-            font-size: 25px;
+            font-size: 8px;
 
         }
     </style>
@@ -217,34 +221,34 @@
             <div>SELECTED WORK</div>
         </div>
 
+        <div class="row">
+            <div class="mx-auto" style="width: 500px;">
+                <div class="card col-12" style="width: 18rem;" id="green-apples">
+                    <img src="img/apple-ipad.jpg"  width="200px" class="card-img-top" alt="...">
+                </div>
 
-        <div class="mx-auto" style="width: 200px;">
-            <div class="card col-12" style="width: 18em;" id="green-apples">
-                <img src="img/apple-ipad.jpg"  width="200px" class="card-img-top" alt="...">
+
+                <div class="featured-project">
+                    <div>FEATURED PROJECT
+                        <button type="button" class="btn" id="dot-1">D</button>
+                        <button type="button" class="btn" id="dot-2">D</button>
+                        <button type="button" class="btn" id="dot-3">S</button>
+                        <button type="button" class="btn" id="dot-4">H</button>
+                    </div>
+                </div>
             </div>
         </div>
 
-
-        <div class="d-inline">
-            <div class="featured-project">
-                <div>FEATURED PROJECT
-                    <button type="button" class="btn" id="dot-1">D</button>
-                    <button type="button" class="btn" id="dot-2">D</button>
-                    <button type="button" class="btn" id="dot-3">S</button>
-                    <button type="button" class="btn" id="dot-4">H</button>
-                </div>
-            </div>
-
-
-<!--            <div class="four-circles-container">-->
-<!--                <div class="four-circles">-->
+<!--        <div class="d-inline">-->
+<!--            <div class="featured-project">-->
+<!--                <div>FEATURED PROJECT-->
 <!--                    <button type="button" class="btn" id="dot-1">D</button>-->
 <!--                    <button type="button" class="btn" id="dot-2">D</button>-->
 <!--                    <button type="button" class="btn" id="dot-3">S</button>-->
 <!--                    <button type="button" class="btn" id="dot-4">H</button>-->
 <!--                </div>-->
 <!--            </div>-->
-        </div>
+<!--        </div>-->
 
 
     </div>
