--- a/lg-codeup-design.html
+++ b/lg-codeup-design.html
@@ -20,8 +20,6 @@
         .nav-container {
             background-color: white;
             margin-top: 3em;
-            /*padding-left: 0;*/
-            /*padding-right: 0;*/
         }
         .nav-link {
             color: black;
@@ -126,20 +124,35 @@
                                           }
         #green-apples {
             margin-top: 2em;
-            margin-left: 2.5em;
+            margin-left: 6em;
             border: 3px solid #e6e6e6;
         }
         #selected-work {
-            margin-left: 2em;
+            margin-left: 6em;
+
         }
         #the-last {
+            margin-right: 5em;
 
         }
         #man {
             margin-top: 2em;
-            margin-left: 2.5em;
+            margin-left: 6em;
             border: 3px solid #e6e6e6;
         }
+        #mac-book{
+            margin-top: 2em;
+            margin-left: 8em;
+            border: 3px solid #e6e6e6;
+
+        }
+        #security{
+            margin-top: 2em;
+            margin-left: 8em;
+            border: 3px solid #e6e6e6;
+
+        }
+
     </style>
 </head>
 
@@ -228,26 +241,33 @@
     <div class="row"><!---ROW DIV START FOR IMAGES--->
 
         <div class="col-2"><!----DIV COLUMN START---->
-
             <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="green-apples">
                 <img src="img/apple-ipad.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
             </div>
-
-            <div class="d-inline">
-                <div class="fp-green-apples col-12" id="fp-dots">
-                    <div>FEATURED PROJECT
-                        <button type="button" class="btn" id="dot-1">D</button>
-                        <button type="button" class="btn" id="dot-2">D</button>
-                        <button type="button" class="btn" id="dot-3">S</button>
-                        <button type="button" class="btn" id="dot-4">H</button>
-                    </div>
-                </div>
-
-
                 <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="man">
                     <img src="img/man.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
                 </div>
-            </div>-<!----DIV COLUMN END---->
+                </div>
+
+
+
+                <div class="col-2">
+                    <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="mac-book">
+                        <img src="img/macbook.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
+                    </div>
+                    <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="security">
+                        <img src="img/security.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+                <!----DIV COLUMN END---->
 
         <div class="col-2"><!---DIV COLUMN START---->
 <!--            <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="macbook">-->
