--- a/lg-codeup-design.html
+++ b/lg-codeup-design.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <title>Practice 2</title>
 
     <style>
@@ -28,6 +29,7 @@
         .fp-green-apples {
             font-size: 10px;
         }
+
         #logo-item {
             margin-left: 8em;
         }
@@ -155,20 +157,27 @@
         }
         #mobile-phone {
             margin-top: 2em;
-            height: 50px;
-            width: 50px;
+            height: 80px;
+            width: 80px;
         }
         #head {
             margin-top: 2em;
-            height: 50px;
-            width: 50px;
+            height: 80px;
+            width: 80px;
         }
         #ipad {
             margin-top: 2em;
-            height: 50px;
-            width: 50px;
+            height: 80px;
+            width: 80px;
+            margin-bottom: 2em;
         }
-
+        #tweet{
+            color: black;
+            margin-left: 1em;
+        }
+        #twitter{
+            color: #1DA1F3;
+        }
     </style>
 </head>
 
@@ -289,6 +298,9 @@
             <div class="card col-12 embed-responsive embed-responsive-4by3" id="ipad">
                 <img src="img/ipad.jpg" class="card-img-top embed-responsive-item" alt="...">
             </div>
+
+
+            <i class="fab fa-twitter" id="twitter"><p class="d-inline" id="tweet">LAST TWEET</p></i>
         </div><!----DIV RIGHT COLUMN END------>
 
     </div><!----FINAL ROW DIV END----->
