--- a/lg-codeup-design.html
+++ b/lg-codeup-design.html
@@ -29,6 +29,9 @@
         .fp-green-apples {
             font-size: 10px;
         }
+        .img-thumbnail-1{
+            margin-top: 2em;
+        }
 
         #logo-item {
             margin-left: 8em;
@@ -134,10 +137,10 @@
             margin-left: 6em;
 
         }
-        #the-last {
-            margin-right: 5em;
+        /*#the-last {*/
+        /*    margin-right: 10em;*/
 
-        }
+        /*}*/
         #man {
             margin-top: 2em;
             margin-left: 6em;
@@ -159,17 +162,20 @@
             margin-top: 2em;
             height: 80px;
             width: 80px;
+
         }
         #head {
             margin-top: 2em;
             height: 80px;
             width: 80px;
+
         }
         #ipad {
             margin-top: 2em;
             height: 80px;
             width: 80px;
             margin-bottom: 2em;
+
         }
         #tweet{
             color: black;
@@ -192,6 +198,8 @@
             margin-right: 50em;
             margin-top: 3em;
             padding: 0;
+
+
         }
         #second-section {
             display: inline-block;
@@ -208,6 +216,18 @@
             margin-right: 50em;
             margin-top: 3em;
             padding: 0;
+        }
+        #fp-1{
+            margin-left: 5em;
+        }
+        #fp-2{
+            margin-left: 5em;
+        }
+        #fp-3{
+            margin-left: 5em;
+        }
+        #fp-4{
+            margin-left: 5em;
         }
     </style>
 </head>
@@ -288,7 +308,7 @@
             SELECTED WORK
         </div><!----SELECTED WORK DIV END---->
 
-        <div class="col-2 offset-lg-2 mt-5" id="the-last"><!----THE LAST COLUMN DIV START--->
+        <div class="col-2 offset-lg-2 mt-5 " id="the-last"><!----THE LAST COLUMN DIV START--->
             THE LAST
         </div><!---THE LAST COLUMN DIV END---->
 
@@ -300,9 +320,25 @@
             <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="green-apples">
                 <img src="img/apple-ipad.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
             </div>
+            <div class="featured-project" id="fp-1">
+                <div>FEATURED PROJECT
+                    <button type="button" class="btn" id="dot-1">D</button>
+                    <button type="button" class="btn" id="dot-2">D</button>
+                    <button type="button" class="btn" id="dot-3">S</button>
+                    <button type="button" class="btn" id="dot-4">H</button>
+                </div>
+            </div>
 
             <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="man">
                     <img src="img/man.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
+            </div>
+            <div class="featured-project" id="fp-2">
+                <div>FEATURED PROJECT
+                    <button type="button" class="btn" id="dot-1">D</button>
+                    <button type="button" class="btn" id="dot-2">D</button>
+                    <button type="button" class="btn" id="dot-3">S</button>
+                    <button type="button" class="btn" id="dot-4">H</button>
+                </div>
             </div>
         </div><!-----DIV LEFT COLUMN END----->
 
@@ -312,23 +348,39 @@
             <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="mac-book">
                         <img src="img/macbook.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
             </div>
+            <div class="featured-project" id="fp-3">
+                <div>FEATURED PROJECT
+                    <button type="button" class="btn" id="dot-1">D</button>
+                    <button type="button" class="btn" id="dot-2">D</button>
+                    <button type="button" class="btn" id="dot-3">S</button>
+                    <button type="button" class="btn" id="dot-4">H</button>
+                </div>
+            </div>
+
+
             <div class="card col-12 embed-responsive embed-responsive-4by3" style="width: 18em;" id="security">
                         <img src="img/security.jpg"  width="200px" height=200px class="card-img-top embed-responsive-item" alt="...">
+            </div>
+
+            <div class="featured-project" id="fp-4">
+                <div>FEATURED PROJECT
+                    <button type="button" class="btn" id="dot-1">D</button>
+                    <button type="button" class="btn" id="dot-2">D</button>
+                    <button type="button" class="btn" id="dot-3">S</button>
+                    <button type="button" class="btn" id="dot-4">H</button>
+                </div>
             </div>
         </div><!----DIV MIDDLE COLUMN END------>
 
 
 
         <div class="col-2 offset-lg-3 p-0"><!---DIV RIGHT COLUMN START------>
-            <div class="card col-12 embed-responsive embed-responsive-4by3" id="mobile-phone">
-                <img src="img/mobile-phone.jpg" class="card-img-top embed-responsive-item" alt="...">
-            </div>
-            <div class="card col-12 embed-responsive embed-responsive-4by3" id="head">
-                <img src="img/head.jpg" class="card-img-top embed-responsive-item" alt="...">
-            </div>
-            <div class="card col-12 embed-responsive embed-responsive-4by3" id="ipad">
-                <img src="img/ipad.jpg" class="card-img-top embed-responsive-item" alt="...">
-            </div>
+                <img src="img/mobile-phone.jpg" alt="..." class="img-thumbnail-1 h-25 w-50 mb-3">
+
+
+            <img src="img/head.jpg" alt="..." class="img-thumbnail h-25 w-50 mb-3">
+
+            <img src="img/ipad.jpg" alt="..." class="img-thumbnail h-25 w-50 mb-3">
 
 
             <i class="fab fa-twitter" id="twitter"><p class="d-inline" id="tweet">LAST TWEET</p></i>
